--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <article>
             <h2>LOREM IPSUM</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit. Nam vel arcu sem. Sed
+                Lorem ipsum dolor sit amet, consectetur<br>
+                adipisicing elit. Nam vel arcu sem. Sed<br>
                 non sodales dui. Interdum et malesuada
             </p>
         </article>
@@ -35,8 +35,8 @@
         <article>
             <h2>LOREM IPSUM</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit. Nam vel arcu sem. Sed
+                Lorem ipsum dolor sit amet, consectetur<br>
+                adipisicing elit. Nam vel arcu sem. Sed<br>
                 non sodales dui. Interdum et malesuada
             </p>
         </article> 
@@ -44,8 +44,8 @@
         <article>
             <h2>LOREM IPSUM</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit. Nam vel arcu sem. Sed
+                Lorem ipsum dolor sit amet, consectetur<br>
+                adipisicing elit. Nam vel arcu sem. Sed<br>
                 non sodales dui. Interdum et malesuada
             </p>
         </article>
@@ -53,8 +53,8 @@
         <article>
             <h2>LOREM IPSUM</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit. Nam vel arcu sem. Sed
+                Lorem ipsum dolor sit amet, consectetur<br>
+                adipisicing elit. Nam vel arcu sem. Sed<br>
                 non sodales dui. Interdum et malesuada
             </p>
         </article>
