--- a/index.html
+++ b/index.html
@@ -23,41 +23,43 @@
         <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
         <button type="button">Zamów usługę</button>
 
-        <article>
-            <h2>LOREM IPSUM</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur<br>
-                adipisicing elit. Nam vel arcu sem. Sed<br>
-                non sodales dui. Interdum et malesuada
-            </p>
-        </article>
+        <section>
+            <article>
+                <h2>LOREM IPSUM</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur<br>
+                    adipisicing elit. Nam vel arcu sem. Sed<br>
+                    non sodales dui. Interdum et malesuada
+                </p>
+            </article>
 
-        <article>
-            <h2>LOREM IPSUM</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur<br>
-                adipisicing elit. Nam vel arcu sem. Sed<br>
-                non sodales dui. Interdum et malesuada
-            </p>
-        </article> 
+            <article>
+                <h2>LOREM IPSUM</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur<br>
+                    adipisicing elit. Nam vel arcu sem. Sed<br>
+                    non sodales dui. Interdum et malesuada
+                </p>
+            </article> 
 
-        <article>
-            <h2>LOREM IPSUM</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur<br>
-                adipisicing elit. Nam vel arcu sem. Sed<br>
-                non sodales dui. Interdum et malesuada
-            </p>
-        </article>
+            <article>
+                <h2>LOREM IPSUM</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur<br>
+                    adipisicing elit. Nam vel arcu sem. Sed<br>
+                    non sodales dui. Interdum et malesuada
+                </p>
+            </article>
 
-        <article>
-            <h2>LOREM IPSUM</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur<br>
-                adipisicing elit. Nam vel arcu sem. Sed<br>
-                non sodales dui. Interdum et malesuada
-            </p>
-        </article>
+            <article>
+                <h2>LOREM IPSUM</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur<br>
+                    adipisicing elit. Nam vel arcu sem. Sed<br>
+                    non sodales dui. Interdum et malesuada
+                </p>
+            </article>
+        </section>
 
         <section>
             <h2>Czym się zajmujemy</h2>
